--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Down for Maintenance</title>
 
     <style type="text/css">
