Refactor out multiple MaintenancePage classes.
This is a pretty big refactor which makes the code more DRY and
configurable while also allowing more formats to be easily supported.

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -58,9 +58,8 @@
       </header>
 
       <section id="body">
-        <div id="reason">
-          <p>The site is temporarily down for maintenance.</p>
-          <p>Please check back soon.</p>
+        <div>
+          {{ reason }}
         </div>
       </section>
 
