--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -18,27 +18,19 @@
       #page{
         position: relative;
         width: 550px;
-        margin: 200px auto;
         padding: 75px 0;
-        text-align: center;
-        background-color: #eaeaea;
-        border: solid 1px #ccc;
-        border-top: solid 10px #666;
-        -moz-box-shadow: inset 0 2px 10px #ccc;
-        -webkit-box-shadow: inset 0 2px 10px #ccc;
-        box-shadow: inset 0 2px 10px #ccc;
       }
 
       header, #body{
-        width: 400px;
+        width: 450px;
         margin: 0 auto;
+        margin-bottom: 10px;
       }
 
       h1{
         margin: 0;
-        color: #CC3601;
+        color: #3F4142;
         font-size: 26pt;
-        border-bottom: solid 4px #666;
       }
 
       #reason{
@@ -54,7 +46,7 @@
     <section id="page">
 
       <header>
-        <h1>Down for Maintenance</h1>
+        <h1>We're taking a short break</h1>
       </header>
 
       <section id="body">
