--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -68,7 +68,7 @@
       <section id="body">
         <div class="message">
           <p>We suggest you to do the same.</p>
-          <p>Make yourself a cup of tee.</p>
+          <p>Make yourself a cup of coffee.</p>
           <p>Give an old friend a call.</p>
           <p>Or even better, write a letter.</p>
           <p>This shouldn't take long.</p>
