--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -14,7 +14,13 @@
         margin: 0;
         background-color: #fff;
       }
-
+      body, input, textarea, select, button {
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        -moz-font-feature-settings: 'liga', 'kern';
+      }
       #page{
         position: relative;
         width: 550px;
@@ -30,13 +36,15 @@
       h1{
         margin: 0;
         color: #303233;
-        font-size: 26pt;
-        font-weight: 300;
+        font-size: 50px;
+        font-weight: 600;
       }
 
       h2{
         color: #3F4142;
-        font-weight: 300;
+        font-weight: 500;
+        font-size: 30px;
+        margin-top: 15px;
       }
 
       #reason{
@@ -47,12 +55,20 @@
       p {
         line-height: 1;
         color: grey;
+        font-size: 20px;
+        margin-bottom: 10px;
+        margin-top: 15px;
       }
 
       .see-you-soon {
         padding-top: 10px;
       }
-      
+      .svg{
+        position: absolute;
+        top: -13%;
+        right: 13%;
+        width: 40%;
+      }
     </style>
 
   </head>
@@ -79,7 +95,7 @@
       </section>
       
     </section>
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
+    <svg class="svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="robot" x="0" y="0" viewBox="0 0 600 800" enable-background="new 0 0 600 800" xml:space="preserve">
   <ellipse id="shadow" opacity="0.4" fill="#2C3332" cx="300" cy="703.4" rx="89" ry="30.6"/>
   <g id="left_arm">
     <path fill="#BABEB7" d="M184 430.9c-44-18.9-84.8 18-94.2 44.1 -10.9-3.3-22.1-1.3-28.8 5.5 -1 1-1.8 2-2.6 3.2 -1.9 2.1-4.5 5.2-6.2 8.3 -5.8 10-2.3 23.1 7.7 32.4l3.8-3.7 5.7-7.1 -3.8 3.8c-6.8-6.4-10.6-14.6-10.5-22.3 -0.1 7.7 3.7 15.9 10.5 22.2l3.8-3.7c-4.8-5.1-6.7-11.7-4.8-17.3 5.6-3.5 13.8-3.4 21 0.8 8.7 5 13 14.3 10.5 21.7 -2.4 1.5-5.3 2.4-8.4 2.5l-5.7 7.1 0.1 6c8.5 0.8 16.5-1.6 21.7-6.8 1.2-1.2 6.3-7.3 7.2-8.8 0 0 0 0 0-0.1 0.6-0.8 1.1-1.5 1.6-2.4 5.5-9.5 2.6-22.1-6.4-31.2 13.2-12.9 33.1-25.2 48.8-9.1C156.5 477.4 189.1 433.1 184 430.9z"/>
